changed spacing issues

--- a/style.css
+++ b/style.css
@@ -417,6 +417,7 @@ article .icon {
   justify-content: center;
   gap: 0.5rem;
   margin: 1rem;
+  margin-right: 5rem;
 }
 
 .contact-info-container p {
